--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -1,23 +1,13 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @import models.timetoteach.TimeToTeachUserId
 @import models.timetoteach.planning.ScottishCurriculumPlanningAreaWrapper
-@import models.timetoteach.ui.CLASS_TERMLY_PLANS_LOWER
+@import models.timetoteach.ui.CLASS_TERMLY_PLANS
 @import models.timetoteach.planning.TermlyCurriculumSelection
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, planningAreas: List[ScottishCurriculumPlanningAreaWrapper], postSelectedCurriculumAreasUrl: Call, theForm: Form[controllers.planning.termly.TermlyPlansControllerFormHelper.CurriculumAreaSelectionData], currentTermlyCurriculumSelection: TermlyCurriculumSelection)(implicit request: AuthenticatedRequest[Any])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
-    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS_LOWER), Some(currentTermlyCurriculumSelection, "NONE")) {
+    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS), Some(currentTermlyCurriculumSelection, "NONE"), None) {
     <div class="in-app-menu-small-devices">
-        <li class="nav-item nav-login-button">
-            <a class="btn btn-outline-primary btn-block" role="button" href="@routes.Application.timeToTeachApp()">
-                Dashboard</a>
-        </li>
-
-        <li class="nav-item nav-login-button ">
-            <a class="btn btn-outline-primary btn-block" role="button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()">
-                Termly Plans Home</a>
-        </li>
-
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary btn-block" role="button"
             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
