--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -1,10 +1,11 @@
 @import models.timetoteach.TimeToTeachUserId
 @import models.timetoteach.planning.{CurriculumAreaTermlyPlan, ScottishCurriculumPlanningAreaWrapper, TermlyCurriculumSelection}
 @import models.timetoteach.ui.CLASS_TERMLY_PLANS_LOWER
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, maybeEsOsAndBenchmarks: Option[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel], currentTermlyCurriculumSelection: TermlyCurriculumSelection, planAreaWrapper: ScottishCurriculumPlanningAreaWrapper)
+@import models.timetoteach.planning.CurriculumPlanProgressForClass
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, maybeEsOsAndBenchmarks: Option[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel], currentTermlyCurriculumSelection: TermlyCurriculumSelection, planAreaWrapper: ScottishCurriculumPlanningAreaWrapper, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
-    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS_LOWER), Some(currentTermlyCurriculumSelection, curriculumArea)) {
+    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS_LOWER), Some(currentTermlyCurriculumSelection, curriculumArea), maybeCurriculumPlanProgress) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary btn-block" role="button" href="@routes.Application.timeToTeachApp()">
@@ -71,14 +72,34 @@
                         <a class="nav-link active group-active-tab" id="tab_@group.groupId.id"
                         href="@controllers.planning.termly.routes.TermlyPlansController.termlyOverviewForCurriculumAreaAtGroupLevel(classDetails.id.id, planAreaWrapper.value.toString, group.groupId.id)"
                         role="tab" aria-controls="tab_@group.groupId.id" aria-selected="true">
-                            @group.groupName.name <div class="text-muted group-level-subscript">@group.groupLevel.value.replace("Level", " Level")</div></a>
+                            <span class="pad-the-tab">@group.groupName.name</span>
+                            <span class="termly-plan-done-check-black ">
+                            @if(maybeCurriculumPlanProgress.isDefined && maybeCurriculumPlanProgress.get.curriculumProgressMap.isDefinedAt(planAreaWrapper) && maybeCurriculumPlanProgress.get.curriculumProgressMap(planAreaWrapper)._2.isDefinedAt(group) &&  maybeCurriculumPlanProgress.get.curriculumProgressMap(planAreaWrapper)._2(group).percentValue == 100 ) {
+                                <svg version="1.1" width="16" height="16" viewBox="0 0 12 16" class="octicon octicon-check float-right" aria-hidden="true">
+                                    <use xlink:href="#check" /></svg>
+                            }else {
+                                <div></div>
+                            }
+                            </span>
+
+                            <div class="text-muted group-level-subscript">@group.groupLevel.value.replace("Level", " Level")</div></a>
                     </li>
                 } else {
                     <li class="nav-item">
                         <a class="nav-link" id="tab_@group.groupId.id"
                         href="@controllers.planning.termly.routes.TermlyPlansController.termlyOverviewForCurriculumAreaAtGroupLevel(classDetails.id.id, planAreaWrapper.value.toString, group.groupId.id)"
                         role="tab" aria-controls="tab_@group.groupId.id" aria-selected="false">
-                            @group.groupName.name <div class="text-muted group-level-subscript">@group.groupLevel.value.replace("Level", " Level")</div></a>
+                            <span class="pad-the-tab">@group.groupName.name</span>
+                            <span class="termly-plan-done-check-black ">
+                            @if(maybeCurriculumPlanProgress.isDefined && maybeCurriculumPlanProgress.get.curriculumProgressMap.isDefinedAt(planAreaWrapper) && maybeCurriculumPlanProgress.get.curriculumProgressMap(planAreaWrapper)._2.isDefinedAt(group) &&  maybeCurriculumPlanProgress.get.curriculumProgressMap(planAreaWrapper)._2(group).percentValue == 100 ) {
+                                <svg version="1.1" width="16" height="16" viewBox="0 0 12 16" class="octicon octicon-check float-right" aria-hidden="true">
+                                    <use xlink:href="#check" /></svg>
+                            }else {
+                                <div></div>
+                            }
+                            </span>
+
+                            <div class="text-muted group-level-subscript">@group.groupLevel.value.replace("Level", " Level")</div></a>
                     </li>
                 }
             }
