--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -253,6 +253,7 @@ input#classLevelInputCurriculumArea {
 }
 
 .group-curriculum-area-header {
+    margin-top: 2rem;
     margin-bottom: 1rem;
 }
 
