--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -1,7 +1,8 @@
 @import models.timetoteach.TimeToTeachUserId
 @import models.timetoteach.planning.{CurriculumPlanProgressForClass, TermlyCurriculumSelection}
 @import models.timetoteach.ui.CLASS_TERMLY_PLANS
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, currentTermlyCurriculumSelection: TermlyCurriculumSelection, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass])
+@import duplicate.model.ClassId
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, currentTermlyCurriculumSelection: TermlyCurriculumSelection, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass], classIdToOverallProgress: Map[ClassId, Int])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
     userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS), Some(currentTermlyCurriculumSelection,"NONE"), maybeCurriculumPlanProgress) {
@@ -33,17 +34,42 @@
     <div class="container">
 
         <div class="termly-plans-overview-section text-center">
+            <h6 class="termly-plans-overview-section-header">Current Overall Status</h6>
+            <div class="progress">
+            @{
+                if(classIdToOverallProgress.isDefinedAt(classDetails.id)) {
+                    defining(classIdToOverallProgress(classDetails.id) + "%") { overallProgressPercent =>
+                        defining(s"width: $overallProgressPercent") { theWidth =>
+                            defining(if(overallProgressPercent == "100%") "progress-bar progress-bar-striped bg-success" else "progress-bar progress-bar-striped bg-warning") { progressBackground =>
+                                <div class={progressBackground} role="progressbar"
+                                style={theWidth} aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                <strong>{overallProgressPercent}</strong>
+                                </div>
+                            }
+                        }
+                    }
+                } else {
+                        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                }
+            }
+            </div>
+
             <h4 class="termly-plans-overview-section-header">Termly Plans</h4>
+
+
             <div id="termly-plans-overview-of-all-classes-section">
 
-                <h6 class="termly-plans-overview-section-header">Current Status</h6>
+
+                <h6 class="termly-plans-overview-section-header">Current Curriculum Status</h6>
 
                 <div class="in-app-menu-medium-and-up">
                     <div class="termly-plans-overview-headers ">
                         <div class="row d-flex justify-content-center">
-                            <div class="col-lg-3 text-right"><small class="text-muted">Curriculum Area</small></div>
                             <div class="col-lg-1"></div>
+                            <div class="col-lg-3 text-right"><small class="text-muted">Curriculum Area</small></div>
+                            <div class="col-lg-2"></div>
                             <div class="col-lg-4"><small class="text-muted">Plan Progress</small></div>
+                            <div class="col-lg-2"></div>
                         </div>
                     </div>
                 </div>
@@ -51,12 +77,13 @@
                 @for((curriculumAreaToPlan, index) <- currentTermlyCurriculumSelection.planningAreasWrapped.sortBy(area => area.niceSpecificValueIfPresent().getOrElse(area.niceValue())).zipWithIndex) {
                     <div class="termly-plans-overview-section-div">
                         <div class="row termly-plans-overview-section-row d-flex justify-content-center">
+                            <div class="col-lg-1"></div>
                             <div class="col-lg-3 text-right">
 
                                 @curriculumAreaToPlan.niceSpecificValueIfPresent().getOrElse(curriculumAreaToPlan.niceValue())
 
                             </div>
-                            <div class="col-lg-1"></div>
+                            <div class="col-lg-2"></div>
                             @{
                                 if(maybeCurriculumPlanProgress.getOrElse(CurriculumPlanProgressForClass(Map())).curriculumProgressMap.isDefinedAt(curriculumAreaToPlan)) {
                                     defining({
@@ -84,6 +111,7 @@
                                         </div>
                                 }
                             }
+                            <div class="col-lg-2"></div>
                         </div>
 
                         <div class="termly-plans-collapse-container">
