--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
@@ -5,7 +5,8 @@
 @import models.timetoteach.planning.TermlyCurriculumSelection
 @import curriculum.scotland.EsOsAndBenchmarksBuilderImpl
 @import models.timetoteach.planning.CurriculumPlanProgressForClass
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, curriculumArea: ScottishCurriculumPlanningAreaWrapper, subjectTermlyPlan: CurriculumAreaTermlyPlan, esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO], currentTermlyCurriculumSelection: TermlyCurriculumSelection, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass])
+@import duplicate.model.ClassId
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, curriculumArea: ScottishCurriculumPlanningAreaWrapper, subjectTermlyPlan: CurriculumAreaTermlyPlan, esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO], currentTermlyCurriculumSelection: TermlyCurriculumSelection, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass], classIdToOverallProgress: Map[ClassId, Int])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
     userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS_LOWER), Some(currentTermlyCurriculumSelection, subjectTermlyPlan.planningArea.toString), maybeCurriculumPlanProgress) {
@@ -41,20 +42,32 @@
 } {
     <div class="container">
 
+        <h6 class="termly-plans-overview-section-header text-center">Current Overall Status</h6>
+        <div class="progress">
+        @{
+            if(classIdToOverallProgress.isDefinedAt(classDetails.id)) {
+                defining(classIdToOverallProgress(classDetails.id) + "%") { overallProgressPercent =>
+                    defining(s"width: $overallProgressPercent") { theWidth =>
+                        defining(if(overallProgressPercent == "100%") "progress-bar progress-bar-striped bg-success" else "progress-bar progress-bar-striped bg-warning") { progressBackground =>
+                            <div class={progressBackground} role="progressbar"
+                            style={theWidth} aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                            <strong>{overallProgressPercent}</strong>
+                            </div>
+                        }
+                    }
+                }
+            } else {
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+            }
+        }
+        </div>
+
         <div class="termly-plans-overview-section-header">
             <h4 class="text-center group-curriculum-area-header">
             @curriculumArea.niceSpecificValueIfPresent().getOrElse(curriculumArea.niceValue())</h4>
         </div>
 
         <div>
-            <div id="reselect-and-download-pdf-section" class="d-flex justify-content-around">
-                <div class="col-3">
-                    <a id="termly-plans-edit" role="button" class="btn btn-outline-primary bg-light"
-                    href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea.value.toString)">
-                        Re-Select Es&Os/Benchmarks</a>
-                </div>
-            </div>
-
 
             <div class="row text-center">
                 <div class="col-sm-6"><h4>Es & Os</h4></div>
@@ -101,6 +114,14 @@
                 </div>
             }
 
+        </div>
+
+        <div id="reselect-and-download-pdf-section" class="d-flex justify-content-around">
+            <div class="col-3">
+                <a id="termly-plans-edit" role="button" class="btn btn-outline-primary bg-light"
+                href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea.value.toString)">
+                    Re-Select Es&Os/Benchmarks</a>
+            </div>
         </div>
 
 
