--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -2,7 +2,8 @@
 @import models.timetoteach.planning.{CurriculumAreaTermlyPlan, ScottishCurriculumPlanningAreaWrapper, TermlyCurriculumSelection}
 @import models.timetoteach.ui.CLASS_TERMLY_PLANS_LOWER
 @import models.timetoteach.planning.CurriculumPlanProgressForClass
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, maybeEsOsAndBenchmarks: Option[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel], currentTermlyCurriculumSelection: TermlyCurriculumSelection, planAreaWrapper: ScottishCurriculumPlanningAreaWrapper, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass])
+@import duplicate.model.ClassId
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, maybeEsOsAndBenchmarks: Option[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel], currentTermlyCurriculumSelection: TermlyCurriculumSelection, planAreaWrapper: ScottishCurriculumPlanningAreaWrapper, maybeCurriculumPlanProgress: Option[CurriculumPlanProgressForClass], classIdToOverallProgress: Map[ClassId, Int])
 
 @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
     userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS_LOWER), Some(currentTermlyCurriculumSelection, curriculumArea), maybeCurriculumPlanProgress) {
@@ -58,6 +59,26 @@
     </div>
 } {
     <div class="container">
+
+        <h6 class="termly-plans-overview-section-header text-center">Current Overall Status</h6>
+        <div class="progress">
+        @{
+            if(classIdToOverallProgress.isDefinedAt(classDetails.id)) {
+                defining(classIdToOverallProgress(classDetails.id) + "%") { overallProgressPercent =>
+                    defining(s"width: $overallProgressPercent") { theWidth =>
+                        defining(if(overallProgressPercent == "100%") "progress-bar progress-bar-striped bg-success" else "progress-bar progress-bar-striped bg-warning") { progressBackground =>
+                            <div class={progressBackground} role="progressbar"
+                            style={theWidth} aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                            <strong>{overallProgressPercent}</strong>
+                            </div>
+                        }
+                    }
+                }
+            } else {
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+            }
+        }
+        </div>
 
         <div class="termly-plans-overview-section-header">
             <h4 class="text-center group-curriculum-area-header">
