--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
@@ -42,7 +42,7 @@
 
         <div class="termly-plans-overview-section-header">
 
-            <h6 class="termly-plans-overview-section-header text-center">Current Overall Status</h6>
+            <h6 class="termly-plans-overview-section-header text-center">% Termly Plan Complete</h6>
             <div class="progress">
             @{
                 if(classIdToOverallProgress.isDefinedAt(classDetails.id)) {
