--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -60,7 +60,7 @@
 } {
     <div class="container">
 
-        <h6 class="termly-plans-overview-section-header text-center">Current Overall Status</h6>
+        <h6 class="termly-plans-overview-section-header text-center">% Termly Plan Complete</h6>
         <div class="progress">
         @{
             if(classIdToOverallProgress.isDefinedAt(classDetails.id)) {
