--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -2,38 +2,9 @@
 /*   Colours - START */
 /* ================= */
 
-.subject-numeracy {
-    background-color: rgba(69, 170, 250, 0.4);
-    color: black;
-    font-weight: bold;
-}
 
-.subject-ict {
-    background-color: rgba(104, 255, 250, 0.65);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-writing {
+.subject-writing, .subject-spelling, .subject-reading, .subject-hand-writing {
     background-color: rgba(20, 171, 20, 0.5);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-spelling {
-    background-color: rgba(138, 227, 3, 0.5);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-reading {
-    background-color: rgba(47, 233, 162, 0.5);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-music {
-    background-color: rgba(233, 225, 8, 0.5);
     color: black;
     font-weight: bold;
 }
@@ -44,13 +15,13 @@
     color: grey;
 }
 
-.subject-rme {
-    background-color: rgba(255, 81, 0, 0.76);
+.subject-physical-education {
+    background-color: rgba(255, 131, 46, 0.76);
     color: black;
     font-weight: bold;
 }
 
-.subject-teacher-covertime {
+.subject-teacher-covertime, .subject-soft-start, .subject-other, .subject-golden-time {
     background-color: rgba(171, 165, 188, 0.9);
     color: black;
     font-weight: bold;
@@ -62,32 +33,14 @@
     font-weight: bold;
 }
 
-.subject-golden-time {
-    background-color: rgba(255, 127, 41, 0.5);
+.subject-rme {
+    background-color: rgba(255, 238, 116, 0.45);
     color: black;
     font-weight: bold;
 }
 
-.subject-physical-education {
-    background-color: rgba(255, 0, 0, 0.45);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-drama {
+.subject-drama, .subject-play, .subject-music, .subject-art {
     background-color: rgba(203, 148, 0, 0.69);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-other {
-    background-color: rgba(233, 233, 233, 1);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-soft-start {
-    background-color: rgba(185, 210, 173, 0.2);
     color: black;
     font-weight: bold;
 }
@@ -98,11 +51,6 @@
     font-weight: bold;
 }
 
-.subject-art {
-    background-color: rgba(254, 255, 166, 0.65);
-    color: black;
-    font-weight: bold;
-}
 
 .subject-topic {
     background-color: rgba(99, 5, 205, 0.55);
@@ -110,39 +58,19 @@
     font-weight: bold;
 }
 
-.subject-hand-writing {
-    background-color: rgb(112, 255, 154);
-    color: black;
-    font-weight: bold;
-}
-
-.subject-play {
-    background-color: rgb(255, 233, 27);
-    color: black;
-    font-weight: bold;
-}
-.subject-maths {
+.subject-maths, .subject-numeracy {
     background-color: rgb(32, 211, 255);
     color: black;
     font-weight: bold;
 }
-.subject-science {
+.subject-science, .subject-ict {
     background-color: rgba(57, 157, 250,0.8);
     color: black;
     font-weight: bold;
 }
-.subject-modern-languages {
-    background-color: rgba(145, 89, 255, 0.5);
-    color: black;
-    font-weight: bold;
-}
-.subject-geography {
+
+.subject-geography, .subject-history, .subject-modern-languages {
     background-color: rgba(237, 72, 167, 0.71);
-    color: black;
-    font-weight: bold;
-}
-.subject-history {
-    background-color: rgba(242, 84, 255, 0.5);
     color: black;
     font-weight: bold;
 }
