--- a/server/public/stylesheets/timetable-colours.css
+++ b/server/public/stylesheets/timetable-colours.css
@@ -15,7 +15,7 @@
     color: grey;
 }
 
-.subject-physical-education {
+.subject-topic {
     background-color: rgba(255, 131, 46, 0.76);
     color: black;
     font-weight: bold;
@@ -28,12 +28,12 @@
 }
 
 .subject-health {
-    background-color: rgba(255, 2, 3,0.8);
+    background-color: rgba(255, 240, 26, 0.8);
     color: black;
     font-weight: bold;
 }
 
-.subject-topic {
+.subject-physical-education {
     background-color: rgba(255, 238, 116, 0.45);
     color: black;
     font-weight: bold;
