--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -57,11 +57,10 @@
 
             <div id="termly-plans-overview-of-all-classes-section">
 
-
                 <h6 class="termly-plans-overview-section-header">Current Curriculum Status</h6>
 
                 <div class="in-app-menu-medium-and-up">
-                    <div class="termly-plans-overview-headers ">
+                    <div class="termly-plans-summary">
                         <div class="row d-flex justify-content-center">
                             <div class="col-lg-1"></div>
                             <div class="col-lg-3 text-right"><small class="text-muted">Curriculum Area</small></div>
