--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
@@ -62,9 +62,9 @@
         }
         </div>
 
-        <div class="termly-plans-overview-section-header">
-            <h4 class="text-center group-curriculum-area-header">
-            @curriculumArea.niceSpecificValueIfPresent().getOrElse(curriculumArea.niceValue())</h4>
+        <div class="termly-plans-overview-section-subheader">
+            <h1 class="text-center group-curriculum-area-header text-primary">
+            @curriculumArea.niceSpecificValueIfPresent().getOrElse(curriculumArea.niceValue())</h1>
         </div>
 
         <div>
