--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
@@ -62,8 +62,11 @@
             }
             </div>
 
-            <h4 class="text-center group-curriculum-area-header">
-            @curriculumArea.toLowerCase.capitalize.split("__").toList.map(word => word.capitalize).mkString(" ")</h4>
+            <div class="termly-plans-overview-section-subheader">
+                <h1 class="text-center group-curriculum-area-header text-primary">
+                @curriculumArea.toLowerCase.capitalize.split("__").toList.map(word => word.capitalize).mkString(" ")
+                </h1>
+            </div>
 
             <ul class="nav nav-tabs" id="tab-for-all-groups" role="tablist">
             @for(group <- classDetails.groups.sortBy(elem => elem.groupLevel.order)) {
