--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
@@ -65,6 +65,14 @@
             <div class="termly-plans-overview-section-subheader">
                 <h1 class="text-center group-curriculum-area-header text-primary">
                 @curriculumArea.toLowerCase.capitalize.split("__").toList.map(word => word.capitalize).mkString(" ")
+
+                    <span class="d-flex ml-auto">
+                        <a id="termly-plans-edit" role="button" class="btn btn-sm btn-outline-primary bg-light"
+                        href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansGroupLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
+                            Re-Select Es&Os/Benchmarks</a>
+                    </span>
+
+
                 </h1>
             </div>
 
@@ -178,13 +186,6 @@
         </div>
 
 
-        <div id="reselect-and-download-pdf-section" class="d-flex justify-content-around">
-            <div class="col-3">
-                <a id="termly-plans-edit" role="button" class="btn btn-outline-primary bg-light"
-                href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansGroupLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
-                    Re-Select Es&Os/Benchmarks</a>
-            </div>
-        </div>
 
 
     </div>
