--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -77,9 +77,9 @@
 
                 </div>
             </div>
-            <div class="d-flex col-md-3">
-                <div class="collapse navbar-collapse in-app-menu-medium-and-up" >
-                    <ul class="navbar-nav">
+            <div class="d-flex col-md-3 ">
+                <div class="collapse navbar-collapse in-app-menu-medium-and-up " >
+                    <ul class="navbar-nav ml-auto ">
 
                         <div class="row align-items-center">
 
