--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -38,11 +38,12 @@
 }
 
 .termly-plans-overview-section-header {
-    margin-top: 0.75rem;
+    margin-top: 2.25rem;
 }
 
 .termly-plans-overview-section-subheader {
-    margin-top: 2rem;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
 }
 
 .termly-plans-overview-container {
