--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -70,7 +70,12 @@
         </nav>
 
         <section id="loginSection">
+            <div class="alert alert-info text-center show this-is-a-test-site-alert" role="alert">
+                <p class="lead"><strong>Note:</strong> This is a beta-test environment and shouldn't be used for actual planning</p>
+            </div>
+
             <div class="container">
+
                 <div class="row">
                     <div class="feature-content">
                         <div class="col-lg-6 d-none d-md-block">
